package gevvent.service.event.create;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;

message Request {
	optional string userID = 1 [(gogoproto.nullable) = false];
	optional string name = 2 [(gogoproto.nullable) = false];
	optional string description = 3 [(gogoproto.nullable) = false];
	optional TimeRange when = 4 [(gogoproto.nullable) = false];
	optional Location where = 5 [(gogoproto.nullable) = false];
	optional bool private = 6;
	optional bool publicAddr = 7;
}

message Response {
	optional string ID = 1 [(gogoproto.nullable) = false];
}

message Location {
	optional double lat = 1 [(gogoproto.nullable) = false];
	optional double lng = 2 [(gogoproto.nullable) = false];
	optional string address = 3 [(gogoproto.nullable) = false];
}

message TimeRange {
	optional int64 from = 1 [(gogoproto.nullable) = false];
	optional int64 to = 2 [(gogoproto.nullable) = false];
}
